<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/insert"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/insert"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/searchView"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/exportList"
        android:title="@string/export_list"
        app:showAsAction="never" />
    <item
        android:id="@+id/importList"
        android:title="@string/import_list"
        app:showAsAction="never" />
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>