<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">
    <LinearLayout
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:id="@+id/sampleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <SeekBar
            android:id="@+id/configTextSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <View
            android:background="#00000000"
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        <TextView
            android:text="@string/touch_action"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/long_click"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <Spinner
                android:id="@+id/configTouchLong"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/swipe_left"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <Spinner
                android:id="@+id/configTouchSwipeLeft"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/swipe_right"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <Spinner
                android:id="@+id/configTouchSwipeRight"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <View
            android:background="#00000000"
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        <TextView
            android:text="@string/countdown_step"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/configCountdown1"
                android:layout_weight="1"
                android:hint="@string/day"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/configCountdown2"
                android:layout_weight="1"
                android:hint="@string/hour"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/configCountdown3"
                android:layout_weight="1"
                android:hint="@string/min"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/configCountdown4"
                android:layout_weight="1"
                android:hint="@string/sec"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <View
            android:background="#00000000"
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        <TextView
            android:text="@string/seq_btn"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/configSeqBtn1"
                android:layout_weight="1"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/configSeqBtn2"
                android:layout_weight="1"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/configSeqBtn3"
                android:layout_weight="1"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/configSeqBtn4"
                android:layout_weight="1"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <View
            android:background="#00000000"
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        <TextView
            android:text="@string/filter_field"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/filterFieldFront"
                android:text="@string/front"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <CheckBox
                android:id="@+id/filterFieldBack"
                android:text="@string/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <CheckBox
                android:id="@+id/filterFieldMarks"
                android:text="@string/marks_lowercase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <View
            android:background="#00000000"
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        <Button
            android:id="@+id/saveSettings"
            android:text="@string/save_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>