<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/drawerLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:titleTextColor="@color/white"
            android:theme="@style/ThemeToolBar"
            app:popupTheme="@style/MyToolbarMenuStyle"
            app:title="@string/app_name"
            android:elevation="4dp"
            />

        <!--        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.DayNight"-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/recyclerViewStyle"
            />
    </LinearLayout>
    <ScrollView
        android:layout_gravity="start"
        android:background="?colorBackgroundFloating"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/loadAll"
                android:text="@string/load_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <Button
                android:id="@+id/renameGroup"
                android:text="@string/rename_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <Spinner
                android:id="@+id/groupSpinnerFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <CheckBox
                android:id="@+id/showHide"
                android:text="@string/show_hide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <Spinner
                android:id="@+id/sortControl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <CheckBox
                android:id="@+id/reverseSort"
                android:text="@string/descend_sort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <Button
                android:id="@+id/shuffleBtn"
                android:text="@string/shuffle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <Button
                android:id="@+id/hideShowBySeq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <Button
                android:id="@+id/bulkOperationOnFlippedSlice"
                android:text="@string/bulk_operation_on_flipped_slice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/lightMode"
                    android:layout_weight="1"
                    android:text="@string/light_mode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarButtonStyle" />
                <Button
                    android:id="@+id/nightMode"
                    android:layout_weight="1"
                    android:text="@string/night_mode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarButtonStyle"/>
                <Button
                    android:id="@+id/autoNightMode"
                    android:layout_weight="1"
                    android:text="@string/follow_system_night_mode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarButtonStyle"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.drawerlayout.widget.DrawerLayout>