<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.SliceNoteEditor"
    tools:context=".EditorActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarEditor"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="@color/white"
        android:theme="@style/ThemeToolBar"
        app:popupTheme="@style/MyToolbarMenuStyle"
        app:title=""
        android:elevation="4dp"
        />

    <!-- AutoCompleteTextView ? -->
    <!--    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textAlignment="center"
            android:text="title" />-->
    <!--        android:background="@color/design_default_color_primary"-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/groupEdit"
            android:hint="@string/group"
            android:layout_weight="10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLength="100"
            android:maxLines="1"
            android:inputType="text"
            android:autofillHints="" />
        <ImageButton
            android:id="@+id/expandSpinner"
            android:layout_weight="1"
            android:layout_width="26sp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="14sp"
            android:src="@drawable/ic_baseline_arrow_drop_down_24"
            android:contentDescription="@string/expand_group_list" />
        <Spinner
            android:id="@+id/groupSpinner"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="invisible"
            />
    </LinearLayout>
    <EditText
        android:id="@+id/frontEdit"
        android:hint="@string/front"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="4"
        />
    <EditText
        android:id="@+id/backEdit"
        android:hint="@string/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="4"
        />
    <EditText
        android:id="@+id/marksEdit"
        android:hint="@string/marks_lowercase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="4"
        />

    <LinearLayout
        android:layout_gravity="end"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/mediaState0"
            android:text="@string/image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
        <CheckBox
            android:id="@+id/mediaState1"
            android:text="@string/audio"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
        <CheckBox
            android:id="@+id/mediaState2"
            android:text="@string/video"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <TextView
        android:id="@+id/createdTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewEnd" />
    <TextView
        android:id="@+id/modifiedTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewEnd" />

</LinearLayout>